--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,11 @@
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            Code --- Name
+            201820145 --- Eduardo Salas
+        </div>
+        <div>
+             <button class="enlace" role="link" onclick="window.location='http://127.0.0.1:8000/static/login.html'">Login</button>
+
         </div>
         <br/>
     </div>
