--- a/web/templates/chatweb.html
+++ b/web/templates/chatweb.html
@@ -1,37 +1,160 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="../static/css/chatwe.css">
-
+    <title>Chat</title>
+    <script sro = "static/js/libs/jquery-3.3.1.js"></script>
+    <link rel = "stylesheet" href = "/static/css/libs/bootstrap.min.css">
+	<script src="/static/js/libs/bootstrap.min.js" ></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/Chat.css">
+    <script src = "/static/js/Chat.js"></script>
 </head>
 <body>
-<div class="chat-popup" id="myForm">
-  <form action="/action_page.php" class="form-container">
-    <h1>Chat</h1>
-      <link rel="stylesheet" href="/static/css/chatwe.css">
+	<div class="main-section">
+		<div class="head-section">
+			<div class="headLeft-section">
+				<div class="headLeft-sub">
+					<!--<input type="text" name="search" placeholder="Search...">-->
+					<div id="current">
+						<label id="current_username"></label>
+                		<button type="button" class="btn btn-primary" onclick="getAllUsers()" >Get Users</button>
+            		</div>
+            		<div id="users"></div>
+				</div>
+			</div>
+		</div>
+		<div class="body-section">
+			<div class="left-section mCustomScrollbar" data-mcs-theme="minimal-dark">
+				<ul>
+					<li>
+						<div class="chatList">
+							<div class="img">
+								<i class="fa fa-circle"></i>
+								<img src="/static/images/consultant.png">
+							</div>
+							<div class="desc">
+								<small class="time">05:30 am</small>
+								<h5>Eduardo Salas</h5>
+								<small>Disponible</small>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="chatList">
+							<div class="img">
+								<img src="/static/images/consultant.png">
+							</div>
+							<div class="desc">
+								<small class="time">18 day</small>
+								<h5>Viejo</h5>
+								<small>Disponible</small>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="chatList">
+							<div class="img">
+								<i class="fa fa-circle"></i>
+								<img src="/demo/man01.png">
+							</div>
+							<div class="desc">
+								<small class="time">11:50 am</small>
+								<h5>Hermana</h5>
+								<small>Disponible</small>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="chatList">
+							<div class="img">
+								<img src="/demo/man03.png">
+							</div>
+							<div class="desc">
+								<small class="time">18 day</small>
+								<h5>Vieja</h5>
+								<small>Disponible</small>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="right-section">
+				<div class="message mCustomScrollbar" data-mcs-theme="minimal-dark">
+					<ul>
+						<li class="msg-left">
+							<div class="msg-left-sub">
+								<img src="/demo/man03.png">
+								<div class="msg-desc">
+									UNO
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+						<li class="msg-right">
+							<div class="msg-left-sub">
+								<img src="/demo/man04.png">
+								<div class="msg-desc">
+									DOS
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+						<li class="msg-day"><small>Wednesday</small></li>
+						<li class="msg-left">
+							<div class="msg-left-sub">
+								<img src="/demo/man03.png">
+								<div class="msg-desc">
+									TRES
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+						<li class="msg-right">
+							<div class="msg-left-sub">
+								<img src="/demo/man04.png">
+								<div class="msg-desc">
+									CUATRO
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+						<li class="msg-left">
+							<div class="msg-left-sub">
+								<img src="/demo/man03.png">
+								<div class="msg-desc">
+									CINCO
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+						<li class="msg-right">
+							<div class="msg-left-sub">
+								<img src="/demo/man04.png">
+								<div class="msg-desc">
+									SEIS
+								</div>
+								<small>05:25 am</small>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="right-section-bottom">
+					<form>
+						<div class="upload-btn">
+						  	<button class="btn"><i class="fa fa-photo"></i></button>
+						  	<input type="file" name="myfile" />
+						</div>
+						<!--<button class="btn-send"><i class="fa fa-send"></i></button>-->
+						<input type="text" name="" placeholder="type here...">
+						<button type = "button" class = "btn btn-primary" onclick="sendMessage()">Send</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <label for="msg"><b>Message</b></label>
-    <textarea placeholder="Type message.." name="msg" required></textarea>
-
-    <button type="submit" class="btn">Send</button>
-    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-  </form>
-</div>
-<script lang="text/javascript">
-    function openForm() {
-  document.getElementById("myForm").style.display = "block";
-}
-
-function closeForm() {
-  document.getElementById("myForm").style.display = "none";
-}
-</script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<!-- custom scrollbar plugin -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 </body>
 </html>
-
-
