--- a/web/templates/chatweb.html
+++ b/web/templates/chatweb.html
@@ -2,159 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chat</title>
-    <script sro = "static/js/libs/jquery-3.3.1.js"></script>
-    <link rel = "stylesheet" href = "/static/css/libs/bootstrap.min.css">
-	<script src="/static/js/libs/bootstrap.min.js" ></script>
-    <link rel="stylesheet" type="text/css" href="/static/css/Chat.css">
-    <script src = "/static/js/Chat.js"></script>
+    <title>chat</title>
+    <script src="/static/js/libs/jquery.js" ></script>
+    <link rel="stylesheet" href="/static/css/libs/bootstrap.min.css">
+    <script src="/static/js/libs/bootstrap.js" ></script>
+    <script src="/static/js/chat.js" ></script>
 </head>
-<body>
-	<div class="main-section">
-		<div class="head-section">
-			<div class="headLeft-section">
-				<div class="headLeft-sub">
-					<!--<input type="text" name="search" placeholder="Search...">-->
-					<div id="current">
-						<label id="current_username"></label>
-                		<button type="button" class="btn btn-primary" onclick="getAllUsers()" >Get Users</button>
-            		</div>
-            		<div id="users"></div>
-				</div>
-			</div>
-		</div>
-		<div class="body-section">
-			<div class="left-section mCustomScrollbar" data-mcs-theme="minimal-dark">
-				<ul>
-					<li>
-						<div class="chatList">
-							<div class="img">
-								<i class="fa fa-circle"></i>
-								<img src="/static/images/consultant.png">
-							</div>
-							<div class="desc">
-								<small class="time">05:30 am</small>
-								<h5>Eduardo Salas</h5>
-								<small>Disponible</small>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="chatList">
-							<div class="img">
-								<img src="/static/images/consultant.png">
-							</div>
-							<div class="desc">
-								<small class="time">18 day</small>
-								<h5>Viejo</h5>
-								<small>Disponible</small>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="chatList">
-							<div class="img">
-								<i class="fa fa-circle"></i>
-								<img src="/demo/man01.png">
-							</div>
-							<div class="desc">
-								<small class="time">11:50 am</small>
-								<h5>Hermana</h5>
-								<small>Disponible</small>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="chatList">
-							<div class="img">
-								<img src="/demo/man03.png">
-							</div>
-							<div class="desc">
-								<small class="time">18 day</small>
-								<h5>Vieja</h5>
-								<small>Disponible</small>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="right-section">
-				<div class="message mCustomScrollbar" data-mcs-theme="minimal-dark">
-					<ul>
-						<li class="msg-left">
-							<div class="msg-left-sub">
-								<img src="/demo/man03.png">
-								<div class="msg-desc">
-									UNO
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-						<li class="msg-right">
-							<div class="msg-left-sub">
-								<img src="/demo/man04.png">
-								<div class="msg-desc">
-									DOS
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-						<li class="msg-day"><small>Wednesday</small></li>
-						<li class="msg-left">
-							<div class="msg-left-sub">
-								<img src="/demo/man03.png">
-								<div class="msg-desc">
-									TRES
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-						<li class="msg-right">
-							<div class="msg-left-sub">
-								<img src="/demo/man04.png">
-								<div class="msg-desc">
-									CUATRO
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-						<li class="msg-left">
-							<div class="msg-left-sub">
-								<img src="/demo/man03.png">
-								<div class="msg-desc">
-									CINCO
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-						<li class="msg-right">
-							<div class="msg-left-sub">
-								<img src="/demo/man04.png">
-								<div class="msg-desc">
-									SEIS
-								</div>
-								<small>05:25 am</small>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="right-section-bottom">
-					<form>
-						<div class="upload-btn">
-						  	<button class="btn"><i class="fa fa-photo"></i></button>
-						  	<input type="file" name="myfile" />
-						</div>
-						<!--<button class="btn-send"><i class="fa fa-send"></i></button>-->
-						<input type="text" name="" placeholder="type here...">
-						<button type = "button" class = "btn btn-primary" onclick="sendMessage()">Send</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<!-- custom scrollbar plugin -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+<body>
+    <a href="/logout">Logout</a>
+    <table width="100%" border="1px">
+        <tr>
+        <td width="30%">
+            <div id="current">
+                <label id="current_username"></label>
+                <button type="button" class="btn btn-primary" onclick="get_current()" >Get current users</button>
+            </div>
+            <div id="users"></div>
+        </td>
+
+        <td width="70%">
+            <div id="boxMessage">
+            </div>
+
+            <div>
+                <input type="text" size="200" id="txtMessage">
+            </div>
+
+            <div>
+                <button type="button" class="btn btn-primary" onclick="sendMessage()">Send</button>
+            </div>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
